--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;600&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="header">
@@ -30,33 +30,23 @@
         <section class="hero section" id="hero">
             <div id="particle-container"></div>
             <div class="hero-content">
-                <div class="hero-text">
+                <div class="hero-center">
                     <h1 class="hero-title">
-                        <span class="title-line title-light">Realiza</span>
-                        <span class="title-line accent">Shows En Vivo.</span>
+                        <span class="title-line">AURA</span>
+                        <span class="title-line subtitle">DONDE EL TALENTO CONOCE LA OPORTUNIDAD</span>
                     </h1>
-                    <p class="hero-description">
-                        Conectamos los mejores talentos con promotores y marcas que buscan experiencias inolvidables.
-                    </p>
                     <div class="hero-actions">
-                        <button class="btn-primary large">Contrata Un Show</button>
-                        
+                        <button class="btn btn-secondary">Promociona tu musica</button>
+                        <button class="btn btn-primary large">Contrata un show</button>
+                        <button class="btn btn-secondary">Promociona tu evento</button>
                     </div>
                 </div>
-                <div class="hero-visual">
-                    <div class="artist-particle-container"></div>
-                </div>
-
             </div>
-        </div>
-        <!-- <div class="events-actions">
-            <button class="btn-primary">Create Event</button>
-            <button class="btn-secondary">Browse All Events</button>
-        </div> -->
+        </section>
     </section>
 
     <!-- Influencers Section -->
-    <section id="influencers" class="section influencers-section">
+    <section id="influencers" class="section influencers-section section-reveal">
         <div class="section-header">
             <h3 class="section-title">Influencers</h3>
             <p class="section-subtitle">Connect with music tastemakers</p>
@@ -130,7 +120,7 @@
     </section>
 
     <!-- Artist Booking Section -->
-    <section id="booking" class="section booking-section">
+    <section id="booking" class="section booking-section section-reveal">
         <div class="section-header">
             <h3 class="section-title">Artist Booking</h3>
             <p class="section-subtitle">Book gigs and manage your performance calendar</p>
@@ -167,7 +157,7 @@
     </section>
 
     <!-- Launches Section -->
-    <section id="launches" class="section launches-section">
+    <section id="launches" class="section launches-section section-reveal">
         <div class="section-header">
             <h3 class="section-title">Launches</h3>
             <p class="section-subtitle">Release your music to the world</p>
@@ -250,5 +240,7 @@
     </footer>
 
     <script src="script.js"></script>
+    <script src="particle-generator.js"></script>
+    <script src="animations.js"></script>
 </body>
 </html>
