style: add responsive sizing for main CTA button with larger desktop dimensions

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <span class="title-line subtitle">DONDE EL TALENTO CONOCE LA OPORTUNIDAD</span>
                     </h1>
                     <div class="hero-actions">
-                        <button class="btn btn-primary large cta-main">Contrata un show</button>
+                        <button class="btn btn-primary large cta-main btn-principal">Contrata un show</button>
                         <button class="btn btn-secondary cta-secondary-1">Promociona tu musica</button>
                         <button class="btn btn-secondary cta-secondary-2">Promociona tu evento</button>
                     </div>
